<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexiv_controllers</name>
  <version>0.6.1</version>
  <description>Flexiv custom ros2 controllers</description>
  <maintainer email="munseng.phoon@flexiv.com">Mun Seng Phoon</maintainer>
  <license>Apache License 2.0</license>
  <author email="munseng.phoon@flexiv.com">Mun Seng Phoon</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>flexiv_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
