<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flexiv_test_nodes</name>
  <version>0.6.1</version>
  <description>Demo nodes for testing flexiv_ros2</description>
  <maintainer email="munseng.phoon@flexiv.com">Mun Seng Phoon</maintainer>
  <license>Apache-2.0</license>
  <author email="munseng.phoon@flexiv.com">Mun Seng Phoon</author>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
